# FluidRAG

./: .env  .env.example  .gitignore  Agents.md  CHANGELOG.md  PHASE_1_NOTES.md  PHASE_2_NOTES.md  PHASE_3_NOTES.md  PHASE_4_NOTES.md  PHASE_5_NOTES.md  PHASE_6_NOTES.md  README.md  UPGRADE_NOTES_v1.4.1.md  UPGRADE_NOTES_v1.4.2.md  UPGRADE_NOTES_v1.4.3-rfqprompt.md  UPGRADE_NOTES_v1.4.3.md  UPGRADE_NOTES_v1.5-FULL.md  finalstubs_latest.json  mypy.ini  pytest.ini  run.py  test.py  tokens.py
rag-app/: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  PHASE_1_NOTES.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
rag-app/backend/: __init__.py
rag-app/backend/app/: __init__.py  config.py  main.py
rag-app/configs/: app.toml
rag-app/frontend/: index.html
rag-app/reports/: phase_10_outcome.md  phase_10_verification.md  phase_11_outcome.md  phase_7_outcome.md  phase_7_verification.md  phase_8_outcome.md  phase_8_verification.md  phase_9_outcome.md  phase_9_verification.md  post_phase_backlog.md
rag-app/scripts/: bench_phase3.py  check_file_lengths.py  offline_pipeline_demo.py  release_checklist.py
ragx/: README.md  __init__.py  pyproject.toml
ragx/config/: profiles.yaml
ragx/core/: context.py  fluid.py  graphrag.py  hep.py  retrieval.py  router.py  segmentation.py  signals.py  utils.py  validator.py
ragx/runners/: build_indexes.py  eval_headers.py  eval_retrieval.py  run_pipeline.py
ragx/tests/: test_fluid_merge.py  test_hep_selector.py  test_profiles_load.py  test_router_retrieval.py  test_segmentation_signals.py
(+568 files in other folders)
