[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragx"
version = "0.1.0"
description = "Context-aware RAG toolkit"
authors = [{name = "FluidRAG Team"}]
requires-python = ">=3.10"

[project.optional-dependencies]
develop = ["pytest", "pyyaml"]
